* fix in BundleNugetizer to deactivate transitive build assets for redisttributable packages * sonarqube fixings and FoDicom additions in Solid framework

--- a/Tools/AlgorithmTools/Solid/DicomAdapters.FoDicom.Impl/Solid.DicomAdapters.FoDicom.Impl.csproj
+++ b/Tools/AlgorithmTools/Solid/DicomAdapters.FoDicom.Impl/Solid.DicomAdapters.FoDicom.Impl.csproj
@@ -17,10 +17,8 @@
 	</PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Dicom.Impl\Solid.Dicom.Impl.csproj" />
+    <ProjectReference Include="..\DicomAdapters.FoDicom\Solid.DicomAdapters.FoDicom.csproj" />
     <ProjectReference Include="..\Infrastructure\Solid.Infrastructure.csproj" />
   </ItemGroup>
 
