--- a/Tools/AlgorithmTools/Solid/Dicom.Impl/Solid.Dicom.Impl.csproj
+++ b/Tools/AlgorithmTools/Solid/Dicom.Impl/Solid.Dicom.Impl.csproj
@@ -8,15 +8,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-	<!--Nullable>enable</Nullable-->
-	<AssemblyVersion>1.0.0.0</AssemblyVersion>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-  </ItemGroup>
+		<OutputType>Library</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<!--Nullable>enable</Nullable-->
+		<VersionPrefix>1.0</VersionPrefix>
+		<Version>$(VersionPrefix).0</Version>
+		<AssemblyVersion>$(Version).0</AssemblyVersion>
+	</PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Dicom\Solid.Dicom.csproj" />
