--- a/Tools/AlgorithmTools/Solid/DicomAdapters.FoDicom/Solid.DicomAdapters.FoDicom.csproj
+++ b/Tools/AlgorithmTools/Solid/DicomAdapters.FoDicom/Solid.DicomAdapters.FoDicom.csproj
@@ -17,11 +17,11 @@
 	</PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="fo-dicom" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Solid.Infrastructure.csproj" />
+    <ProjectReference Include="..\Dicom\Solid.Dicom.csproj" />
   </ItemGroup>
 
 </Project>
