--- a/Tools/AlgorithmTools/Solid/DicomAdapters.FoDicom_uTest/Solid.DicomAdapters.FoDicom_uTest.csproj.csproj
+++ b/Tools/AlgorithmTools/Solid/DicomAdapters.FoDicom_uTest/Solid.DicomAdapters.FoDicom_uTest.csproj.csproj
@@ -17,11 +17,15 @@
 	</PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Solid.Infrastructure.csproj" />
+    <ProjectReference Include="..\DicomAdapters.FoDicom.Impl\Solid.DicomAdapters.FoDicom.Impl.csproj" />
   </ItemGroup>
 
 </Project>
