--- a/Tools/AlgorithmTools/Solid/Infrastructure_uTest/Solid.Infrastructure_uTest.csproj
+++ b/Tools/AlgorithmTools/Solid/Infrastructure_uTest/Solid.Infrastructure_uTest.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	
+  
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
     <SccAuxPath>SAK</SccAuxPath>
     <SccLocalPath>SAK</SccLocalPath>
   </PropertyGroup>
-	
+  
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-	  <!--Nullable>enable</Nullable-->
-		<VersionPrefix>1.0</VersionPrefix>
-		<Version>$(VersionPrefix).0</Version>
-		<AssemblyVersion>$(Version).0</AssemblyVersion>
-	</PropertyGroup>
-	
+    <TargetFramework Condition="'$(TargetFramework)'==''">net7.0</TargetFramework>
+    <!--Nullable>enable</Nullable-->
+    <VersionPrefix>1.0</VersionPrefix>
+    <Version>$(VersionPrefix).0</Version>
+    <AssemblyVersion>$(Version).0</AssemblyVersion>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
@@ -23,7 +23,7 @@
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
   </ItemGroup>
-	
+  
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Solid.Infrastructure.csproj" />
   </ItemGroup>
