--- a/Tools/AlgorithmTools/Solid/Registrare/Solid.Registrare.csproj
+++ b/Tools/AlgorithmTools/Solid/Registrare/Solid.Registrare.csproj
@@ -9,14 +9,16 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-	<!--Nullable>enable</Nullable-->
-	<AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <TargetFramework Condition="'$(TargetFramework)'==''">net7.0</TargetFramework>
+    <!--Nullable>enable</Nullable-->
+    <VersionPrefix>1.0</VersionPrefix>
+    <Version>$(VersionPrefix).0</Version>
+    <AssemblyVersion>$(Version).0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Solid.Infrastructure.csproj" />
-		<ProjectReference Include="..\Dicom.Impl\Solid.Dicom.Impl.csproj" />
+    <ProjectReference Include="..\Dicom.Impl\Solid.Dicom.Impl.csproj" />
   </ItemGroup>
 
 </Project>
