--- a/Tools/AlgorithmTools/Solid/TestInfrastructure/Solid.TestInfrastructure.csproj
+++ b/Tools/AlgorithmTools/Solid/TestInfrastructure/Solid.TestInfrastructure.csproj
@@ -9,10 +9,12 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-		<!--Nullable>enable</Nullable-->
-		<AssemblyVersion>1.0.0.0</AssemblyVersion>
-	</PropertyGroup>
+    <TargetFramework Condition="'$(TargetFramework)'==''">net7.0</TargetFramework>
+    <!--Nullable>enable</Nullable-->
+    <VersionPrefix>1.0</VersionPrefix>
+    <Version>$(VersionPrefix).0</Version>
+    <AssemblyVersion>$(Version).0</AssemblyVersion>
+  </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="Dicom\DicomDataSetBuilder.cs" />
@@ -27,8 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Include="FluentAssertions" Version="6.5.1" />
-	<PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
   </ItemGroup>
 
   <ItemGroup>
