MaterialCalibration tool - switch to .NET4.8

--- a/Tools/Solid/Infrastructure/Solid.Infrastructure.csproj
+++ b/Tools/Solid/Infrastructure/Solid.Infrastructure.csproj
@@ -2,7 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework Condition="'$(TargetFramework)'==''">net7.0</TargetFramework>
+		
+		<TargetFramework>net48</TargetFramework>
+		<!--LangVersion>10.0</LangVersion-->
+		<TargetFramework Condition="'$(TargetFramework)'==''">net7.0</TargetFramework>
+		
     <!--Nullable>enable</Nullable-->
     <VersionPrefix>1.0</VersionPrefix>
     <Version>$(VersionPrefix).0</Version>
