switched to .net80, moved solution 1 folder up and redefined binaries ouput folder and enabled archiving of debugger launch settings

--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
-**/Properties/launchSettings.json
+#**/Properties/launchSettings.json
 
 # StyleCop
 StyleCopReport.xml
